package utility;

import core.Person;

public interface EmotionalActions {
    public void smile();
    public void thankTo(Person person);
}
