package utility;

public enum ItemType {
    PERSONAL,
    TOOL,
    CLOTHING,
}
